Fix flash sales alignment beginner auctions display align sub navigation

--- a/app/assets/stylesheets/soldstyles/_default_themes.scss
+++ b/app/assets/stylesheets/soldstyles/_default_themes.scss
@@ -382,7 +382,7 @@ label.radio.tokens {margin-bottom: 20px;}
 }
 div.flashmain {
   width: 950px;
-  margin:0 auto;
+  margin-left: 25px;
     .flashmain-left {float: left; margin-left: 20px; margin-bottom: 20px;}
     .flashmain-right {float: right; margin-right: 10px; width: 420px; padding: 0 10px 10px 20px;}
     .flash-img {float:left; margin:0 20px 20px 0;}
